# Aframp-backend

./: .gitignore  COMPLIANCE_EFFECTIVENESS_IMPLEMENTATION.md  CTR_IMPLEMENTATION_COMPLETE.md  CTR_QUICK_START.md  Cargo.toml  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  MINT_SLA_PR.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_INFRASTRUCTURE_COMPLETE.md  PRODUCTION_INFRASTRUCTURE_DEPLOYMENT.md  STELLAR_COMPLETION_SUMMARY.md  STELLAR_IMPLEMENTATION_COMPLETE.md  STELLAR_QUICKSTART.sh  STELLAR_SUBMISSION_ENGINE.md  TEST_VERIFICATION.md  WALLET_ADDRESS_BOOK_IMPLEMENTATION.md
.github/workflows/: branch-protection.yml  ci-cd.yml  dr_backup_restore_verify.yml
db/migrations/: capacity_planning_schema.sql  dark_pool_otc_exchange_governance_quantum_schema.sql  mint_sla_schema.sql
docs/runbooks/: regional-failover.md
examples/: stellar_submission_example.rs
frontend/__tests__/: dashboard.test.ts  tenant.test.ts  wallet.test.ts
frontend/hooks/: useLedgerStream.ts  useTenantConfig.ts  useWalletConnection.ts  useWebSocket.ts
frontend/middleware/: tenant-resolver.ts
frontend/types/: index.ts
infra/k8s/: deployment.yaml  hpa.yaml  service.yaml
infra/terraform/: dr_bcp.tf  horizontal_scaling.tf
institutional-portal/: package-lock.json  package.json  vitest.config.ts
k8s/base/: deployment.yaml  pdb.yaml  service.yaml
k8s/hpa/: hpa.yaml  keda-scaledobject.yaml  kustomization.yaml
k8s/monitoring/: kustomization.yaml  pod-monitor.yaml  prometheus-adapter-config.yaml
k8s/production/: configmap.yaml  deployment.yaml  hpa.yaml  istio-gateway.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  secrets-template.yaml
migrations/: 20241101000000_sor_and_rebalancing.sql  20260427000000_performance_sla_management.sql  20260428000000_compliance_effectiveness_reports.sql  20260428100000_kyb_system.sql  20260429000000_wallet_analytics.sql  20260429010000_remittance_partners.sql  20260429020000_shard_registry.sql  20260526000000_add_consumer_id_to_transactions.sql  20260527000000_create_compliance_alerts.sql  20260527000001_create_audit_replication_log.sql  20260527100000_replication_lag_log.sql  20260529000000_regulatory_evidence_package.sql  20260601000000_cluster_node_heartbeats.sql  20260601000000_create_cbdc_gateways.sql  20260601000000_partner_compliance_due_diligence.sql  20260601000000_sor_rebalancing_schema.sql  20260601000000_stellar_ecosystem_partner_integration.sql  20260601000000_stellar_submission_channels.sql  20260601000001_create_cbdc_swap_records.sql  20260601000001_flash_liquidity_schema.sql  20260601000001_stellar_channel_topup_queue.sql  20260601000002_compliance_oracle_schema.sql  20260601000002_create_cryptographic_signatory_vault.sql  20260601000003_create_cbdc_2pc_locks.sql  20260601000003_fee_optimizer_schema.sql  20260601000010_sor_rebalancing_schema.sql  20260601000012_stellar_ecosystem_partner_integration.sql  20261001000000_create_settlement_schema.sql  20270424000001_database_scaling_acceleration_views.sql  20270427000000_partner_integration_framework.sql  20270428000000_collateral_lending_schema.sql  20270428000000_dr_bcp_schema.sql  20270428000001_event_driven_architecture.sql  20270428000002_travel_rule_schema.sql  20270429000000_address_book_beneficiary_management.sql  20270429000000_pep_screening_engine.sql  20270501000000_cryptographic_por.sql  20270501000000_multi_tenant_rate_limiting.sql  20270501000000_pep_screening_extended.sql  20270501000001_predictive_liquidity_ml.sql  (+14 more)
scripts/: chaos-testing.sh  deploy-production.sh
src/: health.rs  lib.rs  main.rs
src/admin/: handlers.rs
src/aml/: champion_challenger.rs  ctr_aggregation.rs  ctr_aggregation_example.md  ctr_auto_generation_example.md  ctr_batch_filing.rs  ctr_batch_filing_api_docs.md  ctr_batch_filing_handlers.rs  ctr_exemption.rs  ctr_exemption_api_docs.md  ctr_exemption_handlers.rs  ctr_exemption_routes_example.rs  ctr_filing.rs  ctr_filing_api_docs.md  ctr_filing_handlers.rs  ctr_generator.rs  ctr_integration_tests.rs  ctr_logging.rs  ctr_management.rs  ctr_management_api_docs.md  ctr_management_handlers.rs  ctr_metrics.rs  ctr_reconciliation.rs  ctr_reconciliation_handlers.rs  ctr_routes_example.rs  ctr_tests.rs  drift_detection.rs  enhanced_case_management.rs  ml_models.rs  ml_screening_layer.rs  mod.rs  models.rs  policy_engine.rs  training_pipeline.rs
src/api/: mod.rs  openapi.rs  por.rs
src/auth/: jwt.rs
src/banking/: admin.rs  fiat_settlement.rs  integrations.rs  metrics.rs  mod.rs  verification.rs  virtual_accounts.rs  webhook_ingestion.rs
src/bft_oracle/: medianizer.rs  metrics.rs  mev_shield.rs  mod.rs  models.rs  tests.rs
src/cache/: advanced_redis.rs  cdn_integration.rs  error.rs  mod.rs
src/capacity/: engine.rs  forecaster.rs  handlers.rs  mod.rs  repository.rs  routes.rs  tests.rs  types.rs  worker.rs
src/cbdc/: gateway.rs  handlers.rs  hsm.rs  metrics.rs  mod.rs  models.rs  repository.rs  reversal.rs  routes.rs  settlement.rs  tests.rs  two_pc.rs  validator.rs
src/collateral_lending/: mod.rs  models.rs  service.rs
src/commission/: handlers.rs  metrics.rs  mod.rs  models.rs  repository.rs  routes.rs  (+3 more)
terraform/: main.tf  outputs.tf  variables.tf
tests/: aml_integration_tests.rs  aml_ml_integration_tests.rs  bft_oracle_tests.rs  cache_integration_tests.rs  commission_engine_test.rs  cors_security_test.rs  defi_analytics_tests.rs  liquidity_ml_tests.rs  mint_authorization_integration.rs  mint_authorization_unit_tests.rs  multi_region_tests.rs  multichain_tests.rs  partner_compliance_integration.rs  partner_hub_integration.rs  por_integration.rs  rate_engine_tests.rs  rate_limit_test.rs  replication_monitor_tests.rs  stellar_ecosystem_integration.rs  stellar_submission_integration.rs  wallet_analytics_test.rs
web/: .env.example  AUTH_IMPLEMENTATION.md  FRONTEND_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  biome.jsonc  jest.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+362 files in other folders)
