[package]
name = "Bitmesh-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ---------------------------------------------------------------------------
# Feature flags
# ---------------------------------------------------------------------------
# "telemetry" is a new feature that gates every OpenTelemetry crate.
# It depends on "database" so that tracing spans over DB / Redis are only
# compiled when the DB layer itself is compiled in.
#
# Dependency chain:
#   cache  →  database  →  (core app deps)
#   telemetry  →  database
# ---------------------------------------------------------------------------
[features]
default = ["database", "cache"]
integration = []
database = [ "dep:tokio", "dep:async-trait", "dep:uuid", "dep:chrono", "dep:serde", "dep:serde_json", "dep:tracing", "dep:tracing-subscriber", "dep:axum", "dep:tower", "dep:tower-http", "dep:regex", "dep:http", "dep:sqlx", "dep:hmac", "dep:sha2", "dep:hex", "dep:bigdecimal", "dep:rust_decimal", "dep:stellar-strkey", "dep:ed25519-dalek", "dep:stellar-xdr", "dep:utoipa", "dep:utoipa-swagger-ui", "dep:argon2", "dep:rand", "dep:bcrypt", "dep:totp-rs", "dep:webauthn-rs", "dep:sha1", "dep:jsonwebtoken", "dep:aes-gcm", "dep:p384", "dep:elliptic-curve", "dep:hkdf", "dep:zeroize", "dep:openssl", "dep:qrcode", "dep:image", "dep:urlencoding" ]
cache = ["dep:redis", "dep:bb8", "dep:bb8-redis", "dep:moka", "dep:prometheus", "dep:tokio-util", "database"]

# Distributed tracing via OpenTelemetry (Issue #104).
# Enables OTLP export to Jaeger / Grafana Tempo, W3C trace-context propagation,
# and the tracing-opentelemetry bridge layer.
telemetry = [
    "database",                          # needs tracing + tracing-subscriber from database feature
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-http",
    "dep:tracing-opentelemetry",
    # tower-http "trace" feature is already enabled via the database feature;
    # listed here for documentation clarity.
]

# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------
[dependencies]

# --- Soroban / Stellar smart-contract SDK (always required) ---
soroban-sdk = "21.0.0"
stellar_sdk  = "0.1.4"
stellar-strkey = { version = "0.0.16", optional = true }
ed25519-dalek  = { version = "2.1.1",  optional = true }
stellar-xdr    = { version = "25.0.0", features = ["next", "base64"], optional = true }

# --- Web framework (optional, gated by "database" feature) ---
axum       = { version = "0.8.8",  optional = true }
tower      = { version = "0.4",    features = ["util"],                         optional = true }
tower-http = { version = "0.5",    features = ["trace", "request-id", "cors"],  optional = true }
http       = { version = "1.0",    optional = true }

# --- Async runtime ---
tokio      = { version = "1.36", features = ["full"],  optional = true }
async-trait = { version = "0.1",                       optional = true }
futures    = "0.3.30"

# --- Serialisation ---
serde      = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0",                        optional = true }

# --- Database ---
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "rust_decimal"], optional = true }

# In-process L1 cache
moka = { version = "0.12", features = ["future"], optional = true }

# Async utilities for single-flight / stampede protection
tokio-util = { version = "0.7", optional = true }

# --- Cache ---
redis    = { version = "1.0.2",  features = ["tokio-comp", "connection-manager"], optional = true }
bb8      = { version = "0.9.1",                                                    optional = true }
bb8-redis = { version = "0.26.0",                                                  optional = true }

# --- Types ---
uuid        = { version = "1.6",  features = ["v4", "serde"],  optional = true }
chrono      = { version = "0.4",  features = ["serde"],         optional = true }
bigdecimal  = { version = "0.4",  features = ["serde"],         optional = true }
rust_decimal = { version = "1.36",                              optional = true }
regex       = { version = "1.12.2",                             optional = true }

# --- Crypto / payment provider helpers ---
hmac   = { version = "0.12", optional = true }
argon2 = { version = "0.5",  optional = true }
rand   = { version = "0.8",  features = ["std"], optional = true }
sha2 = { version = "0.10", optional = true }
hex  = { version = "0.4",  optional = true }
bcrypt = { version = "0.15", optional = true }

# --- HTTP client (outbound calls — payment providers, Horizon, rate APIs) ---
# reqwest 0.13 ships with a built-in connection pool and supports injecting
# arbitrary headers, which is required for W3C traceparent injection.
reqwest = { version = "0.13.1", features = ["json"] }

# --- Config / environment ---
config  = "0.15.19"
dotenv  = "0.15.0"
base64  = "0.22.1"

# --- Error handling ---
anyhow    = "1.0.100"
thiserror = "2.0.18"

# --- Nigerian bank account validation ---
# --- Zero-copy XDR parsing (Issue #345) ---
# zerocopy: safe zero-copy byte-to-struct casting without unsafe blocks.
# bytes: reference-counted byte buffer for buffer pooling.
zerocopy = { version = "0.7.35", features = ["derive"] }
bytes    = "1.6.0"

# --- Nigerian bank account validation ---
nuban = "1.1.0"
csv = "1.3"
serde_yaml = "0.9"

# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# QR code generation for POS payments
qrcode = { version = "0.14", optional = true }
image = { version = "0.25", optional = true }
urlencoding = { version = "2.1", optional = true }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"], optional = true }
lazy_static = "1.4"

# PDF & Reporting
typst = "0.11"
chrono-tz = "0.9"

# Additional crypto dependencies for admin auth
totp-rs = { version = "5.1", optional = true }
webauthn-rs = { version = "0.5", optional = true }
sha1 = { version = "0.10", optional = true }

# ---------------------------------------------------------------------------
# Tracing — base layer (optional via "database" feature)
# ---------------------------------------------------------------------------
# tracing and tracing-subscriber are gated by the "database" feature (already
# present in the original Cargo.toml).  They are listed here with their full
# feature sets so the JSON formatter and env-filter are always available when
# the "database" feature is active.
tracing            = { version = "0.1",  optional = true }
tracing-subscriber = { version = "0.3",  features = ["json", "env-filter", "fmt"], optional = true }

# JWT authentication
jsonwebtoken = { version = "9.3", optional = true }

# RSA signing for OAuth 2.0 RS256 tokens
rsa = { version = "0.9", features = ["sha2", "pem"], optional = true }

# OpenSSL for mTLS certificate generation
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Payload encryption (Issue — Data Security & Encryption)
aes-gcm   = { version = "0.10", optional = true }
p384      = { version = "0.13", features = ["ecdh", "pem"], optional = true }
elliptic-curve = { version = "0.13", optional = true }
hkdf      = { version = "0.12", optional = true }
zeroize   = { version = "1.7", features = ["derive"], optional = true }

# MaxMind GeoIP2 for IP geolocation
maxminddb = { version = "0.24", optional = true }

# Hostname for hardware signature in audit ledger
hostname = "0.4"

# ---------------------------------------------------------------------------
# OpenTelemetry — distributed tracing (Issue #104, gated by "telemetry" feature)
# ---------------------------------------------------------------------------
opentelemetry = { version = "0.22", features = ["trace"], optional = true }

# SDK — TracerProvider, BatchSpanProcessor, samplers, ID generators.
# The "rt-tokio" feature is required for the async batch exporter used with Tokio.
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"], optional = true }

# OTLP exporter — ships traces to Jaeger / Grafana Tempo / any OTLP backend.
# "tonic" enables the gRPC transport; "grpc-tonic" wires it to the SDK pipeline.
opentelemetry-otlp = { version = "0.15", features = ["tonic", "trace", "grpc-tonic"], optional = true }

# Semantic conventions — standard span attribute keys (http.method, db.system, etc.)
opentelemetry-semantic-conventions = { version = "0.14", optional = true }

# HTTP helpers — Extractor / Injector traits for W3C traceparent header handling.
opentelemetry-http = { version = "0.11", optional = true }

# Bridge layer — connects `tracing` spans to the OpenTelemetry SDK so every
# tracing::info_span! call is automatically exported as an OTLP span.
tracing-opentelemetry = { version = "0.23", optional = true }

# ---------------------------------------------------------------------------
# Binaries
# ---------------------------------------------------------------------------
[[bin]]
name = "Aframp-Backend"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Integration test — trace context propagation (Issue #104)
# ---------------------------------------------------------------------------
[[test]]
name = "adaptive_rate_limit_integration"
path = "tests/adaptive_rate_limit_integration.rs"
required-features = ["integration"]

[[test]]
name = "tracing_integration"
path = "tests/tracing_integration.rs"

[[test]]
name = "api_key_integration"
path = "tests/api_key_integration.rs"
required-features = ["integration"]

# ---------------------------------------------------------------------------
# Integration test — API key rotation & expiry (Issue #137)
# ---------------------------------------------------------------------------
[[test]]
name = "key_rotation_integration"
path = "tests/key_rotation_integration.rs"
required-features = ["database"]

# ---------------------------------------------------------------------------
# Integration test — HMAC request signing (Issue #139)
# ---------------------------------------------------------------------------
[[test]]
name = "hmac_signing_test"
path = "tests/hmac_signing_test.rs"
required-features = ["database"]

[[test]]
name = "ddos_integration"
path = "tests/ddos_integration.rs"
required-features = ["cache"]

[[test]]
name = "pentest_integration"
path = "tests/pentest_integration.rs"
required-features = ["integration"]

# ---------------------------------------------------------------------------
# Integration test — API gateway security policy enforcement
# ---------------------------------------------------------------------------
[[test]]
name = "gateway_integration"
path = "tests/gateway_integration.rs"
required-features = ["database"]

# ---------------------------------------------------------------------------
# Dev dependencies
# ---------------------------------------------------------------------------
[dev-dependencies]
# Criterion benchmarking harness (Issue #345)
criterion = { version = "0.5.1", features = ["html_reports"] }

soroban-sdk = { version = "25.0.1", features = ["testutils"] }
wiremock = "0.6"
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio       = { version = "1.49.0", features = ["full"] }
tokio-test  = "0.4"
bigdecimal  = "0.4"
proptest    = "1.4"
base64      = "0.22.1"
uuid        = { version = "1.6", features = ["v4"] }

[[test]]
name = "payload_encryption_test"
path = "tests/payload_encryption_test.rs"
required-features = ["database"]

[[test]]
name = "key_management_test"
path = "tests/key_management_test.rs"
required-features = ["database"]

[[test]]
name = "analytics_integration"
path = "tests/analytics_integration.rs"
required-features = ["database"]

[[test]]
name = "liquidity_integration"
path = "tests/liquidity_integration.rs"
required-features = ["integration"]

[[test]]
name = "bug_bounty_integration"
path = "tests/bug_bounty_integration.rs"
required-features = ["database"]

[[test]]
name = "wallet_unit_tests"
path = "tests/wallet_unit_tests.rs"
required-features = ["database"]

[[test]]
name = "wallet_integration_tests"
path = "tests/wallet_integration_tests.rs"
required-features = ["integration"]

[[test]]
name = "multisig_governance_test"
path = "tests/multisig_governance_test.rs"
required-features = ["database"]

[[test]]
name = "dispute_resolution_tests"
path = "tests/dispute_resolution_tests.rs"
required-features = ["database"]
# ---------------------------------------------------------------------------
# Benchmarks (Issue #345 -- zero-copy XDR parser)
# ---------------------------------------------------------------------------
[[bench]]
name = "xdr_parser"
path = "benches/xdr_parser.rs"
harness = false

[[test]]
name = "audit_ledger_integration"
path = "tests/audit_ledger_integration.rs"
required-features = ["database"]
